hello-limit/hello-limit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-limit
    app.kubernetes.io/component: hello-limit
    app.kubernetes.io/instance: hello-limit
  name: hello-limit
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: hello-limit
  sessionAffinity: None
  type: ClusterIP
